--- a/index.html
+++ b/index.html
@@ -15,7 +15,23 @@
 <body>
   <header>
     <nav>
-      <div class="row"></div>
+      <div class="row">
+        <img class="logo" src="/resources/css/img/logo-white.png" alt="logo">
+        <ul class="main-nav">
+          <li>
+            <a href=#>Food Delivery</a>
+          </li>
+          <li>
+            <a href=#>How it words</a>
+          </li>
+          <li>
+            <a href=#>Our cities</a>
+          </li>
+          <li>
+            <a href=#>Sign Up</a>
+          </li>
+        </ul>
+      </div>
     </nav>
     <div class="hero-text-box">
       <h1>Goodbye junk food.</br> Hello super healthy meals.</h1>
