--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.css">
   <link rel="stylesheet" href="vendors/css/grid.css">
   <link rel="stylesheet" href="vendors/css/normalise.css">
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
@@ -40,6 +41,99 @@
     </div>
   </header>
 
+  <section class="section-features">
+    <div class="row">
+      <h2>Get food fast &mdash; not fast food.</h2>
+      <p class="col span-3-of-4 long">
+        Hello, we’re Omnifood, your new premium food delivery service. We know you’re always busy. No time for cooking. So let us
+        take care of that, we’re really good at it, we promise!
+
+      </p>
+    </div>
+
+    <div class="row">
+      <div class="col span-1-of-4 box">
+        <i class="ion-ios-infinite-outline icon-big"></i>
+        <h3>Up to 365 days/year</h3>
+        <p>
+          Never cook again! We really mean that. Our subscription plans include up to 365 days/year coverage. You can also choose to
+          order more flexibly if that's your style.
+        </p>
+      </div>
+      <div class="col span-1-of-4 box">
+        <i class="ion-ios-stopwatch-outline icon-big"></i>
+        <h3>Ready in 20 minutes</h3>
+        <p>
+          Ready in 20 minutes You're only twenty minutes away from your delicious and super healthy meals delivered right to your home.
+          We work with the best chefs in each town to ensure that you're 100% happy.
+        </p>
+      </div>
+      <div class="col span-1-of-4 box">
+        <i class="ion-ios-nutrition-outline icon-big"></i>
+        <h3>100% Organic</h3>
+        <p>
+          All our vegetables are fresh, organic and local. Animals are raised without added hormones or antibiotics. Good for your
+          health, the environment, and it also tastes better!
+        </p>
+      </div>
+      <div class="col span-1-of-4 box">
+        <i class="ion-ios-cart-outline icon-big"></i>
+        <h3>Order Anything</h3>
+        <p>
+          We don't limit your creativity, which means you can order whatever you feel like. You can also choose from our menu containing
+          over 100 delicious meals. It's up to you!
+        </p>
+      </div>
+    </div>
+
+  </section>
+
+  <section class="section-meals">
+    <ul class="meals-showcase">
+      <li>
+        <figure class="meal-photo">
+          <img src="resources/css/img/1.jpg" alt="Korean" srcset="">
+        </figure>
+      </li>
+      <li>
+        <figure class="meal-photo">
+          <img src="resources/css/img/2.jpg" alt="Italian pizza" srcset="">
+        </figure>
+      </li>
+      <li>
+        <figure class="meal-photo">
+          <img src="resources/css/img/3.jpg" alt="Chicken Breast" srcset="">
+        </figure>
+      </li>
+      <li>
+        <figure class="meal-photo">
+          <img src="resources/css/img/4.jpg" alt="Soup" srcset="">
+        </figure>
+      </li>
+    </ul>
+    <ul class="meals-showcase">
+      <li>
+        <figure class="meal-photo">
+          <img src="resources/css/img/5.jpg" alt="Beef steak" srcset="">
+        </figure>
+      </li>
+      <li>
+        <figure class="meal-photo">
+          <img src="resources/css/img/6.jpg" alt="Healthy Baguette" srcset="">
+        </figure>
+      </li>
+      <li>
+        <figure class="meal-photo">
+          <img src="resources/css/img/7.jpg" alt="Burger and bacon" srcset="">
+        </figure>
+      </li>
+      <li>
+        <figure class="meal-photo">
+          <img src="resources/css/img/8.jpg" alt="Granola" srcset="">
+        </figure>
+      </li>
+    </ul>
+  </section>
   </div>
 </body>
 
