--- a/index.html
+++ b/index.html
@@ -134,7 +134,42 @@
       </li>
     </ul>
   </section>
-  </div>
+  <section class="section-steps">
+    <div class="row">
+      <h2>How it works &mdash; Simple as 1, 2, 3</h2>
+    </div>
+    <div class="row">
+      <div class="col span-1-of-2">
+        <img class="app-screen" src="resources/css/img/app-iPhone.png" alt="iphone app" srcset="">
+      </div>
+      <div class="col span-1-of-2">
+        <div class="works-step">
+          <div>1</div>
+          <p>Choose the subscription plan that best fits your needs and sign up today.</p>
+        </div>
+        <div class="works-step">
+          <div>2</div>
+          <p>Order your delicious meal using our mobile app or website. Or you can even call us!</p>
+        </div>
+        <div class="works-step">
+          <div>3</div>
+          <p>Enjoy your meal after less than 20 minutes. See you the next time! </p>
+        </div>
+        <a href="#" class="btn-app">
+          <img src="resources/css/img/download-app.svg" alt="App Store" srcset="">
+        </a>
+        <a href="#" class="btn-app">
+          <img src="resources/css/img/download-app-android.png" alt="Play store" srcset="">
+        </a>
+      </div>
+    </div>
+  </section>
 </body>
+<!-- Section 3: How it works
+Title: How it works - Simple as 1, 2, 3
+
+1.	Choose the subscription plan that best fits your needs and sign up today.
+2.	Order your delicious meal using our mobile app or website. Or you can even call us!
+3.	Enjoy your meal after less than 20 minutes. See you the next time! -->
 
 </html>
