--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   </section>
 
   <section class="section-meals">
-    <ul class="meals-showcase">
+    <ul class="meals-showcase clearfix">
       <li>
         <figure class="meal-photo">
           <img src="resources/css/img/1.jpg" alt="Korean" srcset="">
@@ -111,7 +111,7 @@
         </figure>
       </li>
     </ul>
-    <ul class="meals-showcase">
+    <ul class="meals-showcase clearfix">
       <li>
         <figure class="meal-photo">
           <img src="resources/css/img/5.jpg" alt="Beef steak" srcset="">
@@ -161,6 +161,108 @@
         <a href="#" class="btn-app">
           <img src="resources/css/img/download-app-android.png" alt="Play store" srcset="">
         </a>
+      </div>
+    </div>
+  </section>
+  <section class="section-cities">
+    <div class="row">
+      <h2>We're currently in these cities</h2>
+    </div>
+    <div class="row">
+      <div class="col span-1-of-4 box">
+        <img src="resources/css/img/lisbon-3.jpg" alt="Lisbon" srcset="">
+        <h3>Lisbon</h3>
+        <div class="city-features">
+          <i class="ion-ios-person icon-small"></i>
+          1600+ Happy Eaters
+        </div>
+        <div class="city-features">
+          <i class="ion-ios-star icon-small"></i>
+          60+ Top Chefs
+        </div>
+        <div class="city-features">
+          <i class="ion-social-twitter icon-small"></i>
+          @omnifood_lx
+        </div>
+      </div>
+      <div class="col span-1-of-4 box">
+        <img src="resources/css/img/san-francisco.jpg" alt="Sanfrancisco" srcset="">
+        <h3>Sanfrancisco</h3>
+        <div class="city-features">
+          <i class="ion-ios-person icon-small"></i>
+          3600+ Happy Eaters
+        </div>
+        <div class="city-features">
+          <i class="ion-ios-star icon-small"></i>
+          160+ Top Chefs
+        </div>
+        <div class="city-features">
+          <i class="ion-social-twitter icon-small"></i>
+          @omnifood_sf
+        </div>
+      </div>
+      <div class="col span-1-of-4 box">
+        <img src="resources/css/img/berlin.jpg" alt="Berlin" srcset="">
+        <h3>Berlin</h3>
+        <div class="city-features">
+          <i class="ion-ios-person icon-small"></i>
+          2200+ Happy Eaters
+        </div>
+        <div class="city-features">
+          <i class="ion-ios-star icon-small"></i>
+          110+ Top Chefs
+        </div>
+        <div class="city-features">
+          <i class="ion-social-twitter icon-small"></i>
+          @omnifood_bl
+        </div>
+      </div>
+      <div class="col span-1-of-4 box">
+        <img src="resources/css/img/london.jpg" alt="London" srcset="">
+        <h3>London</h3>
+        <div class="city-features">
+          <i class="ion-ios-person icon-small"></i>
+          5600+ Happy Eaters
+        </div>
+        <div class="city-features">
+          <i class="ion-ios-star icon-small"></i>
+          90+ Top Chefs
+        </div>
+        <div class="city-features">
+          <i class="ion-social-twitter icon-small"></i>
+          @omnifood_ld
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="section-testimonials">
+    <div class="row">
+      <h2>Our customers can't live without us</h2>
+    </div>
+    <div class="row">
+      <div class="col span-1-of-3">
+        <blockquote>
+          Omnifood is just awesome! I just launched a startup which leaves me with no time for cooking, so Omnifood is a life-saver.
+          Now that I got used to it, I couldn't live without my daily meals!
+          <cite>
+            <img src="resources/css/img/customer-1.jpg" alt="Customer Alberto"> Alberto Duncan</cite>
+        </blockquote>
+      </div>
+      <div class="col span-1-of-3">
+        <blockquote>
+          Inexpensive, healthy and great-tasting meals, delivered right to my home. We have lots of food delivery here in Lisbon, but
+          no one comes even close to Omifood. Me and my family are so in love!
+          <cite>
+            <img src="resources/css/img/customer-2.jpg" alt="Customer Joana"> Joana Silva</cite>
+        </blockquote>
+      </div>
+      <div class="col span-1-of-3">
+        <blockquote>
+          I was looking for a quick and easy food delivery service in San Franciso. I tried a lot of them and ended up with Omnifood.
+          Best food delivery service in the Bay Area. Keep up the great work!
+          <cite>
+            <img src="resources/css/img/customer-3.jpg" alt="Customer Milton"> Milton Chapman</cite>
+        </blockquote>
       </div>
     </div>
   </section>
