--- a/index.html
+++ b/index.html
@@ -424,6 +424,49 @@
       </form>
     </div>
   </section>
+
+  <footer>
+    <div class="row">
+      <div class="col span-1-of-2">
+        <ul class="footer-nav">
+          <li>
+            <a href="#">About Us</a>
+            <a href="#">Blog</a>
+            <a href="#">Press</a>
+            <a href="#">iOS App</a>
+            <a href="#">Android App</a>
+          </li>
+        </ul>
+      </div>
+      <div class="col span-1-of-2">
+        <ul class="social-links">
+          <li>
+            <a href="#">
+              <i class="ion-social-facebook"></i>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="ion-social-twitter"></i>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="ion-social-googleplus"></i>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="ion-social-instagram"></i>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="row">
+      <p>Copyright &copy; 2019 by Omnifood. All rights reserved.</p>
+    </div>
+  </footer>
 </body>
 
 </html>
