--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     <div class="row">
       <h2>Get food fast &mdash; not fast food.</h2>
       <p class="col span-3-of-4 long">
-        Hello, we’re Omnifood, your new premium food delivery service. We know you’re always busy. No time for cooking. So let us
-        take care of that, we’re really good at it, we promise!
+        Hello, we're Omnifood, your new premium food delivery service. We know you're always busy. No time for cooking. So let us
+        take care of that, we're really good at it, we promise!
 
       </p>
     </div>
@@ -281,7 +281,7 @@
             <p class="plan-price">$399
               <span>per month</span>
             </p>
-            <p class="plan-price-meal">That’s only 13.30$ per meal</p>
+            <p class="plan-price-meal">That's only 13.30$ per meal</p>
           </div>
           <div>
             <ul>
@@ -307,7 +307,7 @@
             <p class="plan-price">$149
               <span>per month</span>
             </p>
-            <p class="plan-price-meal">That’s only 14.90$ per meal</p>
+            <p class="plan-price-meal">That's only 14.90$ per meal</p>
           </div>
           <div>
             <ul>
