--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <a href='#signUp'>Sign Up</a>
           </li>
         </ul>
-        <a href="" class="mobile-nav-icon">
+        <a href="#" class="mobile-nav-icon nav-icon">
           <i class="ion-navicon-round"></i>
         </a>
       </div>
