--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Omnifood is a premium food delivery service with a mission to bring affordable and health meals to all.">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.css">
   <link rel="stylesheet" href="vendors/css/grid.css">
@@ -12,7 +13,17 @@
   <link rel="stylesheet" href="resources/css/style.css">
   <link rel="stylesheet" href="resources/css/queries.css">
   <link rel="stylesheet" href="vendors/css/animate.css">
+  <link rel="apple-touch-icon" sizes="180x180" href="/resources/favicons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/resources/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/resources/favicons/favicon-16x16.png">
+  <link rel="manifest" href="/resources/favicons/site.webmanifest">
+  <link rel="mask-icon" href="/resources/favicons/safari-pinned-tab.svg" color="#383838">
+  <link rel="shortcut icon" href="/resources/favicons/favicon.ico">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-config" content="/resources/favicons/browserconfig.xml">
+  <meta name="theme-color" content="#ffffff">
   <title>Omnifood</title>
+
 </head>
 
 <body>
@@ -41,7 +52,8 @@
       </div>
     </nav>
     <div class="hero-text-box">
-      <h1>Goodbye junk food.</br> Hello super healthy meals.</h1>
+      <h1>Goodbye junk food.
+        <br> Hello super healthy meals.</h1>
       <a class="btn btn-full hungryBtn" href="#">I'm Hungry</a>
       <a class="btn btn-ghost showmeBtn" href="#">Show me more</a>
     </div>
@@ -99,44 +111,44 @@
     <ul class="meals-showcase clearfix">
       <li>
         <figure class="meal-photo">
-          <img src="resources/css/img/1.jpg" alt="Korean" srcset="">
+          <img src="resources/css/img/1.jpg" alt="Korean">
         </figure>
       </li>
       <li>
         <figure class="meal-photo">
-          <img src="resources/css/img/2.jpg" alt="Italian pizza" srcset="">
+          <img src="resources/css/img/2.jpg" alt="Italian pizza">
         </figure>
       </li>
       <li>
         <figure class="meal-photo">
-          <img src="resources/css/img/3.jpg" alt="Chicken Breast" srcset="">
+          <img src="resources/css/img/3.jpg" alt="Chicken Breast">
         </figure>
       </li>
       <li>
         <figure class="meal-photo">
-          <img src="resources/css/img/4.jpg" alt="Soup" srcset="">
+          <img src="resources/css/img/4.jpg" alt="Soup">
         </figure>
       </li>
     </ul>
     <ul class="meals-showcase clearfix">
       <li>
         <figure class="meal-photo">
-          <img src="resources/css/img/5.jpg" alt="Beef steak" srcset="">
+          <img src="resources/css/img/5.jpg" alt="Beef steak">
         </figure>
       </li>
       <li>
         <figure class="meal-photo">
-          <img src="resources/css/img/6.jpg" alt="Healthy Baguette" srcset="">
+          <img src="resources/css/img/6.jpg" alt="Healthy Baguette">
         </figure>
       </li>
       <li>
         <figure class="meal-photo">
-          <img src="resources/css/img/7.jpg" alt="Burger and bacon" srcset="">
+          <img src="resources/css/img/7.jpg" alt="Burger and bacon">
         </figure>
       </li>
       <li>
         <figure class="meal-photo">
-          <img src="resources/css/img/8.jpg" alt="Granola" srcset="">
+          <img src="resources/css/img/8.jpg" alt="Granola">
         </figure>
       </li>
     </ul>
@@ -147,7 +159,7 @@
     </div>
     <div class="row">
       <div class="col span-1-of-2 steps-box">
-        <img class="app-screen js--wp-2" src="resources/css/img/app-iPhone.png" alt="iphone app" srcset="">
+        <img class="app-screen js--wp-2" src="resources/css/img/app-iPhone.png" alt="iphone app">
       </div>
       <div class="col span-1-of-2 steps-box">
         <div class="works-step">
@@ -163,10 +175,10 @@
           <p>Enjoy your meal after less than 20 minutes. See you the next time! </p>
         </div>
         <a href="#" class="btn-app">
-          <img src="resources/css/img/download-app.svg" alt="App Store" srcset="">
+          <img src="resources/css/img/download-app.svg" alt="App Store">
         </a>
         <a href="#" class="btn-app">
-          <img src="resources/css/img/download-app-android.png" alt="Play store" srcset="">
+          <img src="resources/css/img/download-app-android.png" alt="Play store">
         </a>
       </div>
     </div>
@@ -177,7 +189,7 @@
     </div>
     <div class="row js--wp-3">
       <div class="col span-1-of-4 box">
-        <img src="resources/css/img/lisbon-3.jpg" alt="Lisbon" srcset="">
+        <img src="resources/css/img/lisbon-3.jpg" alt="Lisbon">
         <h3>Lisbon</h3>
         <div class="city-features">
           <i class="ion-ios-person icon-small"></i>
@@ -193,7 +205,7 @@
         </div>
       </div>
       <div class="col span-1-of-4 box">
-        <img src="resources/css/img/san-francisco.jpg" alt="Sanfrancisco" srcset="">
+        <img src="resources/css/img/san-francisco.jpg" alt="Sanfrancisco">
         <h3>Sanfrancisco</h3>
         <div class="city-features">
           <i class="ion-ios-person icon-small"></i>
@@ -209,7 +221,7 @@
         </div>
       </div>
       <div class="col span-1-of-4 box">
-        <img src="resources/css/img/berlin.jpg" alt="Berlin" srcset="">
+        <img src="resources/css/img/berlin.jpg" alt="Berlin">
         <h3>Berlin</h3>
         <div class="city-features">
           <i class="ion-ios-person icon-small"></i>
@@ -225,7 +237,7 @@
         </div>
       </div>
       <div class="col span-1-of-4 box">
-        <img src="resources/css/img/london.jpg" alt="London" srcset="">
+        <img src="resources/css/img/london.jpg" alt="London">
         <h3>London</h3>
         <div class="city-features">
           <i class="ion-ios-person icon-small"></i>
@@ -420,7 +432,7 @@
           </div>
           <div class="row">
             <div class="col span-1-of-3">
-              <label for="">&nbsp;</label>
+              <label>&nbsp;</label>
 
             </div>
             <div class="col span-2-of-3">
